10-advanced-networking/resources/example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-public-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - app.<< your tag >>.conplement.cloud 
      secretName: letsencrypt-staging-secret # Secret name should be unique within a namespace (will be created for you)
  rules:
    - host: app.<< your tag>>.conplement.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
          - path: /api
            backend:
              serviceName: backend
              servicePort: 80
          - path: /swagger
            backend:
              serviceName: backend
              servicePort: 80
